fix: set "Status" as the main cluster view | Fixes 8, 9 on #326

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -126,6 +126,10 @@ strong {
     color: var(--blue);
 }
 
+.no-color {
+    color: var(--gray5);
+}
+
 /* Loader */
 #loader {
     position: fixed;
@@ -936,6 +940,10 @@ ul.breadcrumbs {
     border-left: 0;
     border-bottom: 0;
     margin: -2px 10px 0;
+}
+
+.breadcrumbs .action {
+    text-transform: capitalize;
 }
 
 .breadcrumbs .namespace svg {
