--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -954,6 +954,14 @@ ul.breadcrumbs {
     font-weight: bold;
 }
 
+.breadcrumbs a {
+    color: inherit;
+}
+
+.breadcrumbs a:hover {
+    color: var(--blue);
+}
+
 ul.tabs {
     list-style: none;
     display: inline-block;
