fix: add link to parent breadcrumbs on base components | Fixes 7 on #328

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -950,6 +950,10 @@ ul.breadcrumbs {
     transform: scale(.85);
 }
 
+.breadcrumbs li:nth-child(2) svg {
+    transform: scale(.8);
+}
+
 .breadcrumbs li.namespace {
     font-weight: bold;
 }
