fix: wrong breadcrump path on configurations

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -1541,6 +1541,10 @@ table .icon {
     text-align: center;
 }
 
+td.icon {
+    padding-right: 10px;
+}
+
 tr:first-child {
     border-top: 1px solid #F0F0F1;
 }
