--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -102,6 +102,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    color: var(--lblue);
+}
+
 strong {
     font-weight: 600;
 }
@@ -227,7 +231,7 @@ pre {
     transform: scale(1.2);
 }
 
-#darkmode.active svg path {
+#darkmode.active svg {
     transition: fill .3s ease-in;
     fill: var(--blue);
 }
@@ -558,6 +562,16 @@ ul.zg-ul-select.active li.active:hover {
     position: relative;
 }
 
+#ns-select li:hover {
+    background: rgba(211, 211, 211, .15);
+    margin-left: -50px;
+    padding-left: 50px;
+}
+
+#ns-select li a:hover {
+    background: transparent;
+} 
+
 #current-namespace h2 span {
     position: relative;
     display: inline-block;
@@ -610,7 +624,7 @@ ul.zg-ul-select.active li.active:hover {
 }
 
 .set {
-    border-bottom: 1px solid rgba(211, 211, 211, .3);
+    /*border-bottom: 1px solid rgba(211, 211, 211, .3);*/
     height: auto;
     font-size: 1.1rem;
     line-height: 60px;
@@ -664,9 +678,9 @@ ul.zg-ul-select.active li.active:hover {
     cursor: pointer;
 }
 
-.item:hover {
+/* .item:hover {
     background-color: rgba(211, 211, 211, .15) !important;
-}
+}*/
 
 .set > div {
     padding-left: 30px;
@@ -808,6 +822,14 @@ ul.zg-ul-select.active li.active:hover {
     text-decoration: none;
     padding-left: 16px;
     text-transform: uppercase;
+    font-size: 1rem;
+}
+
+.addnew:before {
+    content: "+";
+    font-size: 18px;
+    display: inline-block;
+    margin-right: 5px;
 }
 
 /* .addnew {
@@ -843,6 +865,11 @@ footer {
     height: 17px;
     margin: 2px auto;
     display: block;
+}
+
+#nav svg:hover {
+    transition: fill .2s ease-in;
+    fill: var(--blue);
 }
 
 #nav:not(.disabled) .top .router-link-active svg, #nav .view.router-link-active svg {
@@ -949,7 +976,7 @@ footer {
     padding: 5px 0;
     border: 1px solid var(--gray1);
     border-radius: 10px;
-    box-shadow: 0 10px 30px rgba(0,0,0,.1);
+    box-shadow: 0 0px 20px rgba(0,0,0,.05);
     margin-left: 70px;
     display: none;
     line-height: 1;
@@ -964,8 +991,9 @@ footer {
 
 #delete .tooltip  h3 {
     border-bottom: 1px solid var(--gray2);
-    padding-bottom: 5px;
+    padding-bottom: 15px;
     margin-bottom: 25px;
+    font-size: 1rem;
 }
 
 #delete .tooltip p {
@@ -1039,11 +1067,6 @@ footer {
 footer .tooltip p {
     padding: 10px 0;
     line-height: 1.3;
-}
-
-#help .tooltip {
-    right: 75px;
-    top: 60px;
 }
 
 #notifications .tooltip {
@@ -1245,6 +1268,10 @@ header .add:before {
     margin-right: 5px;
 }
 
+header .add:hover {
+    color: var(--lblue);
+}
+
 header .actions {
     position: absolute;
     top: 0;
@@ -1273,6 +1300,7 @@ ul.breadcrumbs {
     float: left;
     align-items: center;
     height: 20px;
+    cursor: default;
 }
 
 .breadcrumbs li:not(:first-child):before {
@@ -1334,6 +1362,10 @@ ul.tabs {
     font-size: 1rem;
     border-bottom: 2px solid transparent;
     margin-bottom: -1px;
+}
+
+.tabs a:hover {
+    color: var(--blue);
 }
 
 .tabs a.router-link-exact-active.router-link-active {
@@ -1448,8 +1480,13 @@ li.status {
     margin-bottom: 10px;
 }
 
+
 .content table {
     margin-bottom: 50px;
+}
+
+#backups tr.details.open > td > table:last-child {
+    margin-bottom: 0px;
 }
 
 .content .box {
@@ -1664,10 +1701,11 @@ ul.selector li {
 /* Forms */
 .form {
     width: 550px;
-    min-width: 550px;
+    /*min-width: 550px;*/
     max-width: 50%;
     display: inline-block;
     position: relative;
+    float: left;
 }
 
 .form label, .form input, .form select {
@@ -1755,6 +1793,16 @@ label.switch {
     font-size: 11px;
     border-color: var(--gray3);
     cursor: pointer;
+}
+
+.switch input:hover {
+    background-color: rgba(0, 173, 181, .25);
+    color: var(--blue);
+    border: 1px solid var(--blue);
+}
+
+.switch input:before:hover {
+    background: var(--blue);
 }
 
 .switch input:checked {
@@ -1858,6 +1906,11 @@ button {
 .form button.border, .btn.border {
     color: var(--blue);
     background: transparent;
+}
+
+.form button.border:hover, .btn.border:hover {
+    background-color: rgba(0, 173, 181, .25);
+
 }
 
 .list-create {
@@ -2043,6 +2096,18 @@ span.req {
 
 /* Help Tooltips */
 
+#help {
+    padding-left: 75px;
+}
+#help .info {
+    line-height: 1.3;
+}
+
+#help .tooltip {
+    right: 75px;
+    top: 60px;
+}
+
 a.help {
     position: absolute;
     margin-top: -48px;
@@ -2050,6 +2115,13 @@ a.help {
     left: 102%;
     margin-bottom: 0;
 }
+
+a.help svg > path:hover {
+    fill: var(--blue);
+    cursor: pointer;
+}
+
+
 
 /* Firefox Outline on focus hack */
 button:focus,
@@ -2066,6 +2138,7 @@ select:-moz-focusring {
 color: transparent;
 text-shadow: 0 0 0 #000;
 }
+
 select:focus::-ms-value {
 background-color: $input-bg;
 color: $input-color;
@@ -2078,12 +2151,21 @@ table {
     text-align: left;
 }
 
-tr:nth-child(4n+2), tr:nth-child(4n+2) + tr.details {
+tr:nth-child(even), tr:nth-child(even) + tr.details {
     background: #fafafa;
 }
 
+#backups tr:nth-child(4n+2), tr:nth-child(4n+2) + tr.details {
+    background: #fff;
+}
+
+#backups tr.base.Completed.open {
+    border-top: 1px solid #f0f0f1;
+}
+
 th, td {
-    height: 40px;
+    /*height: 40px;*/
+    padding: 10px 0;
     vertical-align: middle;
 }
 
@@ -2095,6 +2177,10 @@ th {
 
 th:first-child, td:first-child {
     padding-left: 15px;
+}
+
+th:last-child, td:last-child {
+    padding-right: 15px;
 }
 
 td.actions {
@@ -2281,6 +2367,10 @@ ul.yaml ul {
     width: 25%;
 }
 
+.clusterInfo tr, .podStatus tr {
+    background: #fafafa;
+}
+
 td.label span {
     text-transform: uppercase;
     padding: 4px 9px;
@@ -2335,6 +2425,10 @@ table.clusterConfig td {
     max-width: 50%;
 }
 
+#keyword:focus {
+    border-color: var(--blue);
+}
+
 .toolbar .filter {
     width: auto;
     float: right;
@@ -2352,6 +2446,12 @@ table.clusterConfig td {
     color: var(--gray4);
     cursor: pointer;
     user-select: none;
+}
+
+.toolbar .toggle:hover{
+    color: var(--blue);
+    background-color: rgba(0, 173, 181, .25);
+    border: 1px solid var(--blue);
 }
 
 .filter label {
@@ -2383,12 +2483,12 @@ table.clusterConfig td {
     position: absolute;
     z-index: 10;
     right: 0;
-    border: 1px solid var(--gray2);
+    border: 1px solid var(--gray1);
     background: #fff;
     margin-top: 10px;
     border-radius: 10px;
     padding: 20px;
-    box-shadow: 0 0 20px rgba(0,0,0,.1);
+    box-shadow: 0 0 20px rgba(0,0,0,.05);
     list-style: none;
     width: 315px;
 }
@@ -2423,6 +2523,11 @@ table.clusterConfig td {
     border-radius: 10px;
     font-size: 10px;
     color: var(--gray4);
+}
+
+.options label:hover {
+    color: var(--blue);
+    background-color: rgba(0, 173, 181, .25);
 }
 
 .options span + label {
@@ -2475,4 +2580,9 @@ tr.no-results {
     background-position: 88% center;
     background-size: 7px;
     background-repeat: no-repeat;
+}
+
+.options select:hover {
+    color: var(--blue);
+    background-color: rgba(0, 173, 181, .25);
 }
