fix: Make sure the active icon appears always on the menu when clicking on a cluster tab

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -702,7 +702,7 @@ ul.zg-ul-select.active li.active:hover {
     color: inherit;
 }
 
-.item.router-link-exact-active:before, .item.current:before {
+.item.router-link-exact-active:before, .current .item:before {
     display: block;
     content: " ";
     position: absolute;
