fix: Design empty screens for every instance | Fixes Nr.14 from #328

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/style.css
@@ -2641,6 +2641,7 @@ table.clusterConfig tr {
 tr.no-results {
     display: none;
     text-align: center;
+    height: 120px;
 }
 
 .options select {
@@ -2665,4 +2666,8 @@ tr.no-results {
 .options select:hover {
     color: var(--blue);
     background-color: rgba(0, 173, 181, .25);
+}
+
+tr.no-results:first-child:last-child {
+    display: table-row;
 }
